tests/baselines/reference/ambientExternalModuleInAnotherExternalModule.errors.txt
tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts(5,16): error TS2435: Ambient modules cannot be nested in other modules or namespaces.
tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts(10,22): error TS2307: Cannot find module 'ext'.


==== tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts (2 errors) ====
    
    class D { }
    export = D;
    
    declare module "ext" {
                   ~~~~~
!!! error TS2435: Ambient modules cannot be nested in other modules or namespaces.
        export class C { }
    }
    
    // Cannot resolve this ext module reference
    import ext = require("ext");
                         ~~~~~
!!! error TS2307: Cannot find module 'ext'.
    var x = ext;